Add Delete Player Endpoint and Logic
